--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost/FarmFlow?createDatabaseIfNotExist=t
 spring.datasource.username=root
 spring.datasource.password=root
 spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
