--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/FarmFlow?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=AA88xk62!@#
+spring.datasource.password=root
 spring.mvc.hiddenmethod.filter.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.prefix=classpath:/templates/
